# aws-or-selfhost

./: Cargo.toml  README.md
examples/: aws.rs  feature.rs  self_host.rs
src/: api.rs  aws.rs  http_helper.rs  lib.rs  self_host.rs
